--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
            <div class="column">
             <div class="column-2 bg-light">
               <h2>Request Callback</h2>
-              <form action="" class="callback-form">
+              <form name="myForm" class="callback-form" method="post" data-netlify="true">
                 <div class="form-control">
                   <label for="name"></label>
                   <input type="text" name="name" id="name" placeholder="Enter Name">
@@ -238,7 +238,7 @@
       }
     }
     // smooth scrolling
-    $('#navbar a, .btn').on('click',function(e){
+    $('#navbar a').on('click',function(e){
       if(this.hash !== ''){
         e.preventDefault();
         const hash = this.hash;
