--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
            <div class="column">
             <div class="column-2 bg-light">
               <h2>Request Callback</h2>
-              <form name="myForm" class="callback-form" method="post" data-netlify="true">
+              <form name="myForm" class="callback-form" method="post" netlify="true">
                 <div class="form-control">
                   <label for="name"></label>
                   <input type="text" name="name" id="name" placeholder="Enter Name">
